fix additional creator and remove alignment

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1223,7 +1223,7 @@ width: 190px;
 	color: #FFCC00;
 }
 
-.fields {
+.field_mis {
 	line-height:45px;
 }
 
